--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ Você é muito especial.
   </div>
 
   <div class="foto-container">
-    <img src="imagens/foto2.jpeg" class="foto" data-msg="🔥 Tico e Teco te acharam meio apimentada por aqui.">
+    <img src="imagens/foto2.jpeg" class="foto" data-msg="🌶️ Tico e Teco te acharam meio apimentada por aqui.">
     <img src="imagens/tico.png" class="personagem tl" data-personagem="tico">
     <img src="imagens/teco.png" class="personagem tr" data-personagem="teco">
     <div class="mensagem-foto"></div>
